--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
+    <div class="conteiner">
+        <div>
+            <span class="hours"></span>
+            <span class="minut"></span>
+            <span class="seconds"></span>
+            <div>
+                <button class="btn-start">Start</button>
+                <button class="btn-stop">Stop</button>
+                <button class="btn-reset">reset</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
