--- a/html/index.html
+++ b/html/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/style.css" media="screen">
     <title>Title</title>
 </head>
 <body>
@@ -17,5 +18,6 @@
             </div>
         </div>
     </div>
+<script src="../js/index.js"></script>
 </body>
 </html>
